# programacao_a4l

./: pyproject.toml
programacao_a4l/: brainstorm.ipynb  hot-s.txt  item.py  modelo.txt  pagina_1.txt  pagina_2.txt  pagina_3.txt  pagina_6.txt  roto.txt
